# projekt-2-piotrek606

./: CMakeLists.txt  README.md
data/: config.txt
include/: Board.hpp  Config.hpp  Food.hpp  Game.hpp  Random.hpp  Snake.hpp  Types.hpp
src/: Board.cpp  Config.cpp  Food.cpp  Game.cpp  Random.cpp  Snake.cpp  main.cpp
